Enhance dashboards and backend for parent/teacher features
Improved Parent and Teacher dashboards to display student names and class info for attendance, grades, and leave requests. Added password reset functionality for admins in the Admin dashboard. Refactored backend controllers and services for better error handling and response DTOs, including a new ParentDashboardDTO for structured parent dashboard data. Restricted password reset endpoints to admins in security config.